Created CRUD APIs for employees

--- a/EMPLOYEE/src/main/resources/application.properties
+++ b/EMPLOYEE/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.application.name=EMPLOYEE
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_microservices
 spring.datasource.username=root
 spring.datasource.password=root
+
+spring.jpa.hibernate.ddl-auto=update
