--- a/EMPLOYEE/src/main/resources/application.properties
+++ b/EMPLOYEE/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=EMPLOYEE
-
+server.port=8081
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_microservices
 spring.datasource.username=root
 spring.datasource.password=root
