--- a/ADDRESS/src/main/resources/application.properties
+++ b/ADDRESS/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 spring.jpa.hibernate.ddl-auto=update
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.hostname=localhost
